--- a/Hjemmesentral/app/src/main/AndroidManifest.xml
+++ b/Hjemmesentral/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS"
         tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:theme="@style/AppTheme"
@@ -31,6 +30,8 @@
         <activity android:name=".activity.WeatherDetailsActivity"
             android:theme="@style/TransparentDialogTheme">
         </activity>
+
+        <activity android:name=".activity.ScreenAutoOffActivity" />
 
     </application>
 
